ghc-4335c07/testsuite/tests/typecheck/should_compile/T13915a.hs
{-# LANGUAGE TypeInType #-}
module Bug where

import T13915a_Foo

data Proxy (a :: k)
data S = MkS (Proxy 'MkT)
