ghc-4335c07/testsuite/tests/typecheck/should_fail/T3468.hs
{-# LANGUAGE ExistentialQuantification #-}

module T3468 where

import T3468a

data Tool d = forall a r . F a

